@@ -23,6 +23,7 @@
 #define LDNS_BUILD_CONFIG_HAVE_INTTYPES_H  @ldns_build_config_have_inttypes_h@
 #define LDNS_BUILD_CONFIG_HAVE_ATTR_FORMAT @ldns_build_config_have_attr_format@
 #define LDNS_BUILD_CONFIG_HAVE_ATTR_UNUSED @ldns_build_config_have_attr_unused@
+#define LDNS_BUILD_CONFIG_HAVE_SOCKLEN_T   @ldns_build_config_have_socklen_t@
 
 /*
  * HAVE_STDBOOL_H is not available when distributed as a library, but no build 
@@ -66,5 +67,9 @@ typedef bool _Bool;
 #endif /* !LDNS_BUILD_CONFIG_HAVE_ATTR_UNUSED */
 
 #define LDNS_TRUSTED_KEY_FILE "@LDNS_TRUSTED_KEY_FILE@"
+
+#if !LDNS_BUILD_CONFIG_HAVE_SOCKLEN_T
+typedef int socklen_t;
+#endif
 
 #endif /* LDNS_COMMON_H */
